--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,5 @@ feewaiver/static/feewaiver_vue/js/app.js
 feewaiver/static/feewaiver_vue/js/manifest.js
 feewaiver/static/feewaiver_vue/js/vendor.js
 feewaiver/static/feewaiver_vue/js/babel-polyfill.js
+
+fw_git_history
