--- a/.gitignore
+++ b/.gitignore
@@ -108,4 +108,4 @@ feewaiver/static/feewaiver_vue/js/manifest.js
 feewaiver/static/feewaiver_vue/js/vendor.js
 feewaiver/static/feewaiver_vue/js/babel-polyfill.js
 
-fw_git_history
+git_history_recent
