--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,5 @@ dj-database-url==0.5.0
 psutil==5.7.0
 phonenumbers==8.12.15
 django-treebeard==4.3.1
+python-decouple==3.8
+git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
