--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,4 @@ phonenumbers==8.12.15
 django-treebeard==4.3.1
 python-decouple==3.8
 git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
+whitenoise==5.3.0
