--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,4 @@ django-treebeard==4.3.1
 python-decouple==3.8
 git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
 whitenoise==5.3.0
+git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
