--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ django-extensions==1.9.8
 git+https://github.com/dbca-wa/dpaw-utils.git@0.4.2#egg=dpaw-utils
 #git+https://github.com/django-oscar/django-oscar.git@17a1f6b17aba19e3c0b095e90acc654d463e0cf9#egg=django-oscar
 # git+https://github.com/django-oscar/django-oscar.git@8a3288da439cc2a878f44ae5c5101043e658d2a2#egg=django-oscar
-social-auth-app-django==2.1.0
-git+https://github.com/scottp-dpaw/social-core.git@email_fix#egg=social-auth-core
+# social-auth-app-django==2.1.0
+# git+https://github.com/scottp-dpaw/social-core.git@email_fix#egg=social-auth-core
 coverage==4.3.1
 coveralls==1.1
 django_bootstrap3==11.1.0
