--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ jedi==0.17.2
 # git+https://github.com/dbca-wa/ledger#egg=ledger
 django-extensions==1.9.8
 #git+https://github.com/dbca-wa/dpaw-utils.git@0.3a16#egg=dpaw-utils
-git+https://github.com/dbca-wa/dpaw-utils.git@0.4.2#egg=dpaw-utils
+# git+https://github.com/dbca-wa/dpaw-utils.git@0.4.2#egg=dpaw-utils
+git+https://github.com/dbca-wa/dbca-utils.git#egg=dbca-utils
 #git+https://github.com/django-oscar/django-oscar.git@17a1f6b17aba19e3c0b095e90acc654d463e0cf9#egg=django-oscar
 # git+https://github.com/django-oscar/django-oscar.git@8a3288da439cc2a878f44ae5c5101043e658d2a2#egg=django-oscar
 # social-auth-app-django==2.1.0
@@ -23,7 +24,7 @@ django-reversion==3.0.9
 django-reversion-compare==0.17.0
 #git+https://github.com/bruth/django-preserialize.git@11f9e822250ea3374d5cfba477a00ca886689d9f#egg=django-preserialize
 git+https://github.com/xzzy/django-preserialize.git#egg=django-preserialize
-django-countries==6.1.3
+django-countries==7.6.1
 django-cron==0.5.0
 django-dynamic-fixture==1.9.1
 openpyxl==2.4.8
@@ -36,7 +37,7 @@ djangorestframework==3.15.1
 #djangorestframework-gis==0.11
 #djangorestframework-csv==2.0.0
 pycountry==17.1.8
-six>=1.10.0
+six>=1.16.0
 django-ical==1.4
 django-taggit==4.0.0
 geojson==1.3.3
@@ -48,6 +49,7 @@ django-reset-migrations==0.3.1
 django-ckeditor==5.4.0
 djangorestframework-datatables==0.7.2
 django-confy==1.0.4
+django-utils-six==2.0
 xlwt==1.3.0
 xlsxwriter==1.1.2
 gunicorn==19.9.0
@@ -64,3 +66,4 @@ python-decouple==3.8
 git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
+django-phonenumber-field==8.0.0
