--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Django==5.0.8
 jedi==0.17.2
 #git+https://github.com/xzzy/ledger.git@master2#egg=ledger
 # git+https://github.com/dbca-wa/ledger#egg=ledger
-django-extensions==1.9.8
+# django-extensions==1.9.8
+django-extensions==3.2.3
 #git+https://github.com/dbca-wa/dpaw-utils.git@0.3a16#egg=dpaw-utils
 # git+https://github.com/dbca-wa/dpaw-utils.git@0.4.2#egg=dpaw-utils
 git+https://github.com/dbca-wa/dbca-utils.git#egg=dbca-utils
@@ -20,12 +21,13 @@ django_bootstrap3==23.6
 #django_bootstrap3==14.2.0
 django-braces>=1.8.1
 django-datatables-view==1.13.0
-django-reversion==3.0.9
+# django-reversion==3.0.9
+django-reversion==5.1.0
 django-reversion-compare==0.17.0
 #git+https://github.com/bruth/django-preserialize.git@11f9e822250ea3374d5cfba477a00ca886689d9f#egg=django-preserialize
 git+https://github.com/xzzy/django-preserialize.git#egg=django-preserialize
 django-countries==7.6.1
-django-cron==0.5.0
+django-cron==0.6.0
 django-dynamic-fixture==1.9.1
 openpyxl==2.4.8
 datapackage==0.8.1
@@ -56,8 +58,9 @@ gunicorn==19.9.0
 dj-static==0.0.6
 mixer==6.1.3
 django-dirtyfields==1.3.1
-python-docx==0.8.10
-docxtpl==0.10.0
+# python-docx==0.8.10
+python-docx==1.1.2
+docxtpl==0.18.0
 dj-database-url==0.5.0
 psutil==5.7.0
 phonenumbers==8.12.15
