--- a/requirements.txt
+++ b/requirements.txt
@@ -71,3 +71,4 @@ git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
 django-phonenumber-field==8.0.0
+gevent==24.2.1
