--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,26 @@
-psycopg2==2.8.6
-reportlab==3.5.55
+psycopg2-binary>=2.9.4
+reportlab==4.2.2
 Django==5.0.8
-#ipython==7.19.0
 jedi==0.17.2
-#git+https://github.com/xzzy/ledger.git@master2#egg=ledger
-# git+https://github.com/dbca-wa/ledger#egg=ledger
-# django-extensions==1.9.8
 django-extensions==3.2.3
-#git+https://github.com/dbca-wa/dpaw-utils.git@0.3a16#egg=dpaw-utils
-# git+https://github.com/dbca-wa/dpaw-utils.git@0.4.2#egg=dpaw-utils
 git+https://github.com/dbca-wa/dbca-utils.git#egg=dbca-utils
-#git+https://github.com/django-oscar/django-oscar.git@17a1f6b17aba19e3c0b095e90acc654d463e0cf9#egg=django-oscar
-# git+https://github.com/django-oscar/django-oscar.git@8a3288da439cc2a878f44ae5c5101043e658d2a2#egg=django-oscar
-# social-auth-app-django==2.1.0
-# git+https://github.com/scottp-dpaw/social-core.git@email_fix#egg=social-auth-core
 coverage==4.3.1
 coveralls==1.1
 django_bootstrap3==23.6
-#django_bootstrap3==7.1.0
-#django_bootstrap3==14.2.0
 django-braces>=1.8.1
 django-datatables-view==1.13.0
-# django-reversion==3.0.9
 django-reversion==5.1.0
 django-reversion-compare==0.17.0
-#git+https://github.com/bruth/django-preserialize.git@11f9e822250ea3374d5cfba477a00ca886689d9f#egg=django-preserialize
 git+https://github.com/xzzy/django-preserialize.git#egg=django-preserialize
 django-countries==7.6.1
-# django-cron==0.6.0
 git+https://github.com/jorenham/django-cron.git#egg=django-cron
 django-dynamic-fixture==1.9.1
-openpyxl==2.4.8
-datapackage==0.8.1
-jsontableschema==0.10.1
+openpyxl==3.0.7
+datapackage==1.15.2
+# jsontableschema==0.10.1
 python-dateutil==2.6.1
 py4j==0.10.2.1
 djangorestframework==3.15.1
-#djangorestframework==3.11.2
-#djangorestframework-gis==0.11
-#djangorestframework-csv==2.0.0
 pycountry==17.1.8
 six>=1.16.0
 django-ical==1.4
@@ -55,11 +37,10 @@ django-confy==1.0.4
 django-utils-six==2.0
 xlwt==1.3.0
 xlsxwriter==1.1.2
-gunicorn==19.9.0
+gunicorn==23.0.0
 dj-static==0.0.6
 mixer==6.1.3
-django-dirtyfields==1.3.1
-# python-docx==0.8.10
+django-dirtyfields==1.9.3
 python-docx==1.1.2
 docxtpl==0.18.0
 dj-database-url==0.5.0
@@ -72,3 +53,4 @@ whitenoise==5.3.0
 git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
 django-phonenumber-field==8.0.0
 gevent==24.2.1
+python-decouple>=3.8
