--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,4 @@ git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
 django-phonenumber-field==8.0.0
 gevent==24.2.1
 python-decouple>=3.8
+pytz==2024.2
