--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,8 @@ django-ical==1.4
 django-taggit==6.0.0
 geojson==1.3.3
 unicodecsv==0.14.1
-PyPDF2==1.26.0
+# PyPDF2==1.26.0
+PyPDF2==3.0.1
 django-extra-fields==0.9
 django-crispy-forms==2.0
 django-reset-migrations==0.3.1
@@ -52,6 +53,6 @@ git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
 django-phonenumber-field==8.0.0
-gevent==24.2.1
+gevent==24.11.1
 python-decouple>=3.8
 pytz==2024.2
