--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -5,18 +5,16 @@
   "author": "Brendan Blackford <brendan.blackford@dbca.wa.gov.au>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "awesomplete": "^1.1.5",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.1",
     "cryptiles": "^4.1.2",
     "datatables.net": "^1.10.22",
     "datatables.net-bs": "^1.10.15",
@@ -39,7 +37,7 @@
     "leaflet.locatecontrol": "^0.71.1",
     "lodash": "^4.17.15",
     "mixin-deep": "^1.3.2",
-    "moment": "^2.18.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "moment-range": "^3.0.3",
     "ol": "^6.3.1",
     "papaparse": "^5.2.0",
@@ -51,25 +49,13 @@
     "set-value": "^2.0.1",
     "stringstream": "0.0.6",
     "sweetalert2": "^6.6.5",
-    "vue": "^2.2.6",
-    "vue-resource": "^1.3.3",
-    "vue-router": "^2.3.1",
+    "vue": "^2.7.16",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^2.8.1",
     "vuejs-paginator": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^7.2.3",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-istanbul": "^4.1.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.29.0",
@@ -87,23 +73,12 @@
     "eslint-plugin-standard": "^2.3.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^5.6.3",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^4.3.0",
-    "karma-coverage": "^2.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.3",
     "lolex": "^1.6.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^6.2.1",
     "nightwatch": "^1.2.4",
     "opn": "^4.0.2",
@@ -116,14 +91,14 @@
     "shelljs": "^0.7.7",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
+    "terser-webpack-plugin": "^5.3.14",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^3.12.0",
+    "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^3.7.3",
+    "webpack-hot-middleware": "^2.25.2",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
