Ignore npm-build-files

--- a/.gitignore
+++ b/.gitignore
@@ -103,10 +103,11 @@ uwsgi*.ini
 feewaiver/frontend/feewaiver/package-lock.json
 
 # npm build files
-feewaiver/static/feewaiver_vue/css/app.css
-feewaiver/static/feewaiver_vue/js/app.js
-feewaiver/static/feewaiver_vue/js/manifest.js
-feewaiver/static/feewaiver_vue/js/vendor.js
-feewaiver/static/feewaiver_vue/js/babel-polyfill.js
+# feewaiver/static/feewaiver_vue/css/app.css
+# feewaiver/static/feewaiver_vue/js/app.js
+# feewaiver/static/feewaiver_vue/js/manifest.js
+# feewaiver/static/feewaiver_vue/js/vendor.js
+# feewaiver/static/feewaiver_vue/js/babel-polyfill.js
+feewaiver/static/feewaiver_vue/*
 
 git_history_recent
