--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -28,11 +28,11 @@
     "handlebars": "^4.7.6",
     "http-proxy": "^1.18.1",
     "ini": "^1.3.8",
-    "jquery": "^3.4.0",
-    "jquery-validation": "^1.19.3",
+    "jquery": "^3.7.1",
+    "jquery-validation": "^1.21.0",
     "jquery.easing": "^1.4.1",
-    "jszip": "^3.1.5",
-    "lodash": "^4.17.15",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "mixin-deep": "^1.3.2",
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-range": "^3.0.3",
@@ -90,12 +90,7 @@
     "terser-webpack-plugin": "^5.3.14",
     "url-loader": "^0.5.8",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-hot-middleware": "^2.25.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "engines": {
     "node": ">= 4.0.0",
