--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -14,13 +14,14 @@
     "@vue/cli-service": "^5.0.8",
     "awesomplete": "^1.1.5",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^5.3.3",
     "cryptiles": "^4.1.2",
-    "datatables.net": "^1.10.22",
-    "datatables.net-bs": "^1.10.15",
-    "datatables.net-buttons": "^1.5.3",
-    "datatables.net-responsive": "^2.1.1",
-    "datatables.net-responsive-bs": "^2.1.1",
+    "datatables.net": "^2.2.2",
+    "datatables.net-bs5": "^2.2.2",
+    "datatables.net-buttons": "^3.2.2",
+    "datatables.net-buttons-bs5": "^3.2.2",
+    "datatables.net-responsive": "^3.0.4",
+    "datatables.net-responsive-bs": "^3.0.4",
     "diff": "^3.5.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "extend": "^3.0.2",
