--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -40,6 +40,7 @@
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "serialize-javascript": "^3.1.0",
     "sweetalert2": "^11.7.27",
+    "uuid": "11.1.0",
     "vue": "^2.7.16",
     "vue-resource": "^1.5.3",
     "vue-router": "^2.8.1",
@@ -49,24 +50,17 @@
     "autoprefixer": "^6.7.7",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^4.0.0",
-    "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.11",
-    "eslint": "^4.18.2",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.3.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
     "eventsource-polyfill": "^0.9.6",
-    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^5.6.3",
     "imports-loader": "^0.7.1",
     "mini-css-extract-plugin": "^2.9.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "url-loader": "^0.5.8",
     "vue-template-compiler": "^2.3.3",
     "webpack-bundle-analyzer": "^4.10.2"
   },
