--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -40,10 +40,9 @@
     "serialize-javascript": "^3.1.0",
     "sweetalert2": "^11.7.27",
     "uuid": "11.1.0",
-    "vue": "^2.7.16",
-    "vue-resource": "^1.5.3",
-    "vue-router": "^2.8.1",
-    "vuejs-paginator": "^2.0.2"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "axios": "^1.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
