--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 psycopg2-binary>=2.9.4
 reportlab==4.2.2
-Django~=5.0.12
+Django~=5.2
 jedi==0.17.2
 django-extensions==3.2.3
-git+https://github.com/dbca-wa/dbca-utils.git#egg=dbca-utils
+dbca-utils==2.1.0
 coverage==4.3.1
 coveralls==1.1
 django-bootstrap5==25.1
@@ -13,11 +13,10 @@ django-reversion==5.1.0
 django-reversion-compare==0.17.0
 git+https://github.com/xzzy/django-preserialize.git#egg=django-preserialize
 django-countries==7.6.1
-git+https://github.com/jorenham/django-cron.git#egg=django-cron
+git+https://github.com/dbca-wa/django-cron#egg=django-cron
 django-dynamic-fixture==1.9.1
 openpyxl==3.0.7
 datapackage==1.15.2
-# jsontableschema==0.10.1
 python-dateutil==2.6.1
 py4j==0.10.2.1
 djangorestframework==3.15.2
