--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -22,9 +22,9 @@
     "datatables.net-responsive": "^3.0.4",
     "datatables.net-responsive-bs": "^3.0.4",
     "diff": "^3.5.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "@eonasdan/tempus-dominus": "6.10.2",
     "extend": "^3.0.2",
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "handlebars": "^4.7.6",
     "http-proxy": "^1.18.1",
     "jquery": "^3.7.1",
