--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ dj-static==0.0.6
 mixer==6.1.3
 django-dirtyfields==1.9.3
 python-docx==1.1.2
-docxtpl==0.19.1
+docxtpl==0.20.0
 dj-database-url==0.5.0
 psutil==5.7.0
 phonenumbers==8.12.15
@@ -50,6 +50,7 @@ git+https://github.com/dbca-wa/appmonitor_client.git#egg=appmonitor_client
 whitenoise==5.3.0
 git+https://github.com/dbca-wa/django5-utils-six.git#egg=django5_six
 django-phonenumber-field==8.0.0
-gevent==24.11.1
+gevent==25.5.1
 python-decouple>=3.8
 pytz==2024.2
+setuptools==80.4.0
