--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -15,12 +15,9 @@
     "awesomplete": "^1.1.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.3.3",
-    "datatables.net": "^2.2.2",
     "datatables.net-bs5": "^2.2.2",
-    "datatables.net-buttons": "^3.2.2",
     "datatables.net-buttons-bs5": "^3.2.2",
-    "datatables.net-responsive": "^3.0.4",
-    "datatables.net-responsive-bs": "^3.0.4",
+    "datatables.net-responsive-bs5": "^3.0.4",
     "diff": "^3.5.0",
     "extend": "^3.0.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -54,7 +51,6 @@
     "eventsource-polyfill": "^0.9.6",
     "html-webpack-plugin": "^5.6.3",
     "imports-loader": "^0.7.1",
-    "mini-css-extract-plugin": "^2.9.2",
     "opn": "^4.0.2",
     "vue-template-compiler": "^2.3.3",
     "webpack-bundle-analyzer": "^4.10.2"
