--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -15,6 +15,7 @@
     "awesomplete": "^1.1.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "datatables.net-bs5": "^2.2.2",
     "datatables.net-buttons-bs5": "^3.2.2",
     "datatables.net-responsive-bs5": "^3.0.4",
