--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -11,7 +11,6 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "@vue/cli-service": "^5.0.8",
     "awesomplete": "^1.1.5",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.3.3",
@@ -42,7 +41,7 @@
     "axios": "^1.8.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
+    "@vue/cli-service": "^5.0.8",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "eslint": "^9.22.0",
@@ -52,9 +51,7 @@
     "eventsource-polyfill": "^0.9.6",
     "html-webpack-plugin": "^5.6.3",
     "imports-loader": "^0.7.1",
-    "opn": "^4.0.2",
-    "vue-template-compiler": "^2.3.3",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "opn": "^4.0.2"
   },
   "engines": {
     "node": ">= 20.11.1",
