--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "awesomplete": "^1.1.5",
+    "axios": "^1.13.2",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
@@ -20,7 +22,6 @@
     "datatables.net-responsive-bs5": "^3.0.4",
     "diff": "^3.5.0",
     "extend": "^3.0.2",
-    "@fortawesome/fontawesome-free": "^6.7.2",
     "handlebars": "^4.7.6",
     "http-proxy": "^1.18.1",
     "jquery": "^3.7.1",
@@ -37,13 +38,11 @@
     "sweetalert2": "^11.7.27",
     "uuid": "11.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "axios": "^1.8.4"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8",
+    "@vue/cli-service": "^5.0.9",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
