--- a/requirements.txt
+++ b/requirements.txt
@@ -52,4 +52,5 @@ gevent==25.5.1
 python-decouple>=3.8
 pytz==2024.2
 setuptools==80.9.0
+urllib3~=2.6.0
 # git+https://github.com/dbca-wa/webtemplate2.git#egg=webtemplate_dbca
