--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -14,7 +14,6 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "awesomplete": "^1.1.5",
     "axios": "^1.13.2",
-    "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "datatables.net-bs5": "^2.2.2",
@@ -30,7 +29,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "mixin-deep": "^1.3.2",
-    "moment-locales-webpack-plugin": "^1.2.0",
+    "moment": "^2.30.1",
     "moment-range": "^3.0.3",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "^1.3.0",
@@ -41,16 +40,13 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.9",
-    "connect-history-api-fallback": "^1.3.0",
+    "@types/jquery": "^3.5.32",
+    "@types/select2": "^4.0.63",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
-    "eventsource-polyfill": "^0.9.6",
-    "html-webpack-plugin": "^5.6.3",
-    "imports-loader": "^0.7.1",
-    "opn": "^4.0.2"
+    "prettier": "^3.5.2"
   },
   "engines": {
     "node": ">= 20.11.1",
