--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@vitejs/plugin-vue": "^6.0.4",
     "awesomplete": "^1.1.5",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.3",
@@ -36,6 +37,10 @@
     "serialize-javascript": "^3.1.0",
     "sweetalert2": "^11.7.27",
     "uuid": "11.1.0",
+    "vite": "^7.3.1",
+    "vite-plugin-eslint2": "^5.0.5",
+    "vite-plugin-static-copy": "^3.2.0",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
