--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -4,11 +4,11 @@
   "description": "A Vue.js project",
   "author": "Brendan Blackford <brendan.blackford@dbca.wa.gov.au>",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "vue-cli-service build",
-    "serve": "vue-cli-service serve",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
