--- a/feewaiver/frontend/feewaiver/package.json
+++ b/feewaiver/frontend/feewaiver/package.json
@@ -44,6 +44,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.5",
     "@types/jquery": "^3.5.32",
     "@types/select2": "^4.0.63",
     "eslint": "^9.22.0",
